[tool.poetry]
name = "harmonic-pattern"
version = "0.1.0"
description = "Harmonic Pattern Scanning Algorithm in Python"
authors = ["Majid Shajari <majidpy89@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "harmonic_pattern"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.2"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
